; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_timer.c_jz4780_timer_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/ingenic/extr_jz4780_timer.c_jz4780_timer_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eventtimer = type { i32, i64 }
%struct.jz4780_timer_softc = type { i32 }

@SBT_1S = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@JZ_TC_TESR = common dso_local global i32 0, align 4
@TESR_TCST5 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eventtimer*, i32, i32)* @jz4780_timer_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jz4780_timer_start(%struct.eventtimer* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.eventtimer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.jz4780_timer_softc*, align 8
  %9 = alloca i32, align 4
  store %struct.eventtimer* %0, %struct.eventtimer** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.eventtimer*, %struct.eventtimer** %5, align 8
  %11 = getelementptr inbounds %struct.eventtimer, %struct.eventtimer* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.jz4780_timer_softc*
  store %struct.jz4780_timer_softc* %13, %struct.jz4780_timer_softc** %8, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.eventtimer*, %struct.eventtimer** %5, align 8
  %16 = getelementptr inbounds %struct.eventtimer, %struct.eventtimer* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = mul nsw i32 %14, %17
  %19 = load i32, i32* @SBT_1S, align 4
  %20 = sdiv i32 %18, %19
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %9, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %3
  %24 = load i32, i32* @EINVAL, align 4
  store i32 %24, i32* %4, align 4
  br label %37

25:                                               ; preds = %3
  %26 = load %struct.jz4780_timer_softc*, %struct.jz4780_timer_softc** %8, align 8
  %27 = call i32 @JZ_TC_TDFR(i32 5)
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @CSR_WRITE_4(%struct.jz4780_timer_softc* %26, i32 %27, i32 %28)
  %30 = load %struct.jz4780_timer_softc*, %struct.jz4780_timer_softc** %8, align 8
  %31 = call i32 @JZ_TC_TCNT(i32 5)
  %32 = call i32 @CSR_WRITE_4(%struct.jz4780_timer_softc* %30, i32 %31, i32 0)
  %33 = load %struct.jz4780_timer_softc*, %struct.jz4780_timer_softc** %8, align 8
  %34 = load i32, i32* @JZ_TC_TESR, align 4
  %35 = load i32, i32* @TESR_TCST5, align 4
  %36 = call i32 @CSR_WRITE_4(%struct.jz4780_timer_softc* %33, i32 %34, i32 %35)
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %25, %23
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @CSR_WRITE_4(%struct.jz4780_timer_softc*, i32, i32) #1

declare dso_local i32 @JZ_TC_TDFR(i32) #1

declare dso_local i32 @JZ_TC_TCNT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
